docs(readme): clarify status semantics and test command; refactor(java): use switch expression in getStatus